Update title and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Triple Pundit</title>
+    <title>TriplePundit: Reporting on the Triple Bottom Line & Sustainable Business News</title>
   </head>
   <body>
     <noscript>
