--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>TriplePundit: Reporting on the Triple Bottom Line & Sustainable Business News</title>
-    <div id="headmeta"></div>
+    [HEADMETA]
   </head>
   <body>
     <noscript>
