Changes Helmet meta element in head so it doesn't render in body of client rendered.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>TriplePundit: Reporting on the Triple Bottom Line & Sustainable Business News</title>
-    <helmetmeta/>
+    <helmetmeta></helmetmeta>
   </head>
   <body>
     <noscript>
