Changes Helmet token in head to valid HTML so browsers won't move it to body.

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>TriplePundit: Reporting on the Triple Bottom Line & Sustainable Business News</title>
-    <helmetmeta></helmetmeta>
+    <!-- Used as a token for Helmet to inject meta data while page is rendered server-side. -->
+    <meta name="helmet">
   </head>
   <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC3786R"
