--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PC3786R');</script>
+
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,6 +31,35 @@
     <meta name="helmet">
   </head>
   <body>
+    <script>
+        PARSELY = {
+            // after PARSELY tracking code loads asynchronously
+            onload: function() {
+                    var url = this.href,
+                        urlref = location.href;
+
+                    PARSELY.beacon.trackPageView({
+                        url: url,
+                        urlref: urlref,
+                        js: 1
+                });
+            }
+        };
+    </script>
+    <div id="parsely-root" style="display: none">
+      <span id="parsely-cfg" data-parsely-site="triplepundit.com"></span>
+    </div>
+    <script>
+        (function(s, p, d) {
+          var h=d.location.protocol, i=p+"-"+s,
+              e=d.getElementById(i), r=d.getElementById(p+"-root"),
+              u=h==="https:"?"d1z2jf7jlzjs58.cloudfront.net"
+              :"static."+p+".com";
+          if (e) return;
+          e = d.createElement(s); e.id = i; e.async = true;
+          e.src = h+"//"+u+"/p.js"; r.appendChild(e);
+        })("script", "parsely", document);
+    </script>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC3786R"
       height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
