--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TriplePundit: Reporting on the Triple Bottom Line & Sustainable Business News</title>
+    <title>Reporting on the Triple Bottom Line & Sustainable Business News</title>
     <!-- Used as a token for Helmet to inject meta data while page is rendered server-side. -->
     <meta name="helmet">
   </head>
