--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1449309-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-1449309-1');
+    </script>
+
     <script>
         if (window.location.href.match('http:') && !window.location.hostname === 'localhost') { window.location.href = window.location.href.replace('http', 'https'); }
     </script>
